--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ text-align: center;
 align-self:center;
 background-repeat: no-repeat;
 background-size: cover;
-  background-image: url("/UX_UI_HW_17/images/gradienthero.jpg");
+  background-image: url("../images/gradienthero.jpg");
   width: 100%; 
   height: 500px;
 }
